kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # - host: a377bcd401ff04cce8daf57178f9d725-25e336cb5e16a2c1.elb.us-west-2.amazonaws.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myservice
              port:
                number: 80
